Fix 'Wrong Inputs creation on (Add Service)'
Signed-off-by: Vasyl Razinkov <vasyl.razinkov@est.tech>
Change-Id: I02b7f89daa8cbcb3d008266add6ca107caa4c2b7
Issue-ID: SDC-4097